9.9/python/_sources/GXIMG.rst.txt

.. _GXIMG:

 
GXIMG class
==================================

.. autoclass:: geosoft.gxapi.GXIMG
   :members:


.. _IMG_FILE:

IMG_FILE constants
-----------------------------------------------------------------------

Image open modes

.. autodata:: geosoft.gxapi.IMG_FILE_READONLY
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FILE_READONLY
.. autodata:: geosoft.gxapi.IMG_FILE_READWRITE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FILE_READWRITE
.. autodata:: geosoft.gxapi.IMG_FILE_READORWRITE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FILE_READORWRITE


.. _IMG_QUERY:

IMG_QUERY constants
-----------------------------------------------------------------------

Information to Query

.. autodata:: geosoft.gxapi.IMG_QUERY_iWRITE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iWRITE
.. autodata:: geosoft.gxapi.IMG_QUERY_iPG
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iPG
.. autodata:: geosoft.gxapi.IMG_QUERY_iWRITEPG
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iWRITEPG
.. autodata:: geosoft.gxapi.IMG_QUERY_iIMGTYPE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iIMGTYPE
.. autodata:: geosoft.gxapi.IMG_QUERY_iDATTYPE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iDATTYPE
.. autodata:: geosoft.gxapi.IMG_QUERY_iRENDER
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iRENDER
.. autodata:: geosoft.gxapi.IMG_QUERY_iKX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iKX
.. autodata:: geosoft.gxapi.IMG_QUERY_iNX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNX
.. autodata:: geosoft.gxapi.IMG_QUERY_iNY
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNY
.. autodata:: geosoft.gxapi.IMG_QUERY_iNV
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNV
.. autodata:: geosoft.gxapi.IMG_QUERY_iNE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNE
.. autodata:: geosoft.gxapi.IMG_QUERY_rXO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rXO
.. autodata:: geosoft.gxapi.IMG_QUERY_rYO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rYO
.. autodata:: geosoft.gxapi.IMG_QUERY_rDX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rDX
.. autodata:: geosoft.gxapi.IMG_QUERY_rDY
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rDY
.. autodata:: geosoft.gxapi.IMG_QUERY_rROT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rROT
.. autodata:: geosoft.gxapi.IMG_QUERY_rBASE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rBASE
.. autodata:: geosoft.gxapi.IMG_QUERY_rMULT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rMULT
.. autodata:: geosoft.gxapi.IMG_QUERY_rCOMPRESSION_RATIO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rCOMPRESSION_RATIO


.. _IMG_RELOCATE:

IMG_RELOCATE constants
-----------------------------------------------------------------------

Relocation Style

.. autodata:: geosoft.gxapi.IMG_RELOCATE_FIT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_RELOCATE_FIT
.. autodata:: geosoft.gxapi.IMG_RELOCATE_ASPECT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_RELOCATE_ASPECT

	