2023.1/python/_sources/GXIMG.rst.txt

.. _GXIMG:

 
GXIMG class
==================================

.. autoclass:: geosoft.gxapi.GXIMG
   :members:


.. _IMG_DISPLAY_PROPERTY:

IMG_DISPLAY_PROPERTY constants
-----------------------------------------------------------------------

Image display property

.. autodata:: geosoft.gxapi.IMG_SHADING_INCLINATION
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_INCLINATION
.. autodata:: geosoft.gxapi.IMG_SHADING_DECLINATION
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_DECLINATION
.. autodata:: geosoft.gxapi.IMG_SHADING_SCALE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_SCALE
.. autodata:: geosoft.gxapi.IMG_SHADING_CONTRAST
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_CONTRAST
.. autodata:: geosoft.gxapi.IMG_SHADING_BRIGHTNESS
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_BRIGHTNESS
.. autodata:: geosoft.gxapi.IMG_SHADING_WETLOOK
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_WETLOOK
.. autodata:: geosoft.gxapi.IMG_COLOURS_REVERSED
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_COLOURS_REVERSED
.. autodata:: geosoft.gxapi.IMG_SMOOTHING_ENABLED
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SMOOTHING_ENABLED
.. autodata:: geosoft.gxapi.IMG_SHADING_ENABLED
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_SHADING_ENABLED


.. _IMG_FAULT:

IMG_FAULT constants
-----------------------------------------------------------------------

Fault type

.. autodata:: geosoft.gxapi.IMG_FAULT_POLYLINE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FAULT_POLYLINE
.. autodata:: geosoft.gxapi.IMG_FAULT_POLYGON
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FAULT_POLYGON


.. _IMG_FILE:

IMG_FILE constants
-----------------------------------------------------------------------

Image open modes

.. autodata:: geosoft.gxapi.IMG_FILE_READONLY
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FILE_READONLY
.. autodata:: geosoft.gxapi.IMG_FILE_READWRITE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FILE_READWRITE
.. autodata:: geosoft.gxapi.IMG_FILE_READORWRITE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_FILE_READORWRITE


.. _IMG_QUERY:

IMG_QUERY constants
-----------------------------------------------------------------------

Information to Query

.. autodata:: geosoft.gxapi.IMG_QUERY_iWRITE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iWRITE
.. autodata:: geosoft.gxapi.IMG_QUERY_iPG
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iPG
.. autodata:: geosoft.gxapi.IMG_QUERY_iWRITEPG
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iWRITEPG
.. autodata:: geosoft.gxapi.IMG_QUERY_iIMGTYPE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iIMGTYPE
.. autodata:: geosoft.gxapi.IMG_QUERY_iDATTYPE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iDATTYPE
.. autodata:: geosoft.gxapi.IMG_QUERY_iRENDER
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iRENDER
.. autodata:: geosoft.gxapi.IMG_QUERY_iKX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iKX
.. autodata:: geosoft.gxapi.IMG_QUERY_iNX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNX
.. autodata:: geosoft.gxapi.IMG_QUERY_iNY
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNY
.. autodata:: geosoft.gxapi.IMG_QUERY_iNV
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNV
.. autodata:: geosoft.gxapi.IMG_QUERY_iNE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_iNE
.. autodata:: geosoft.gxapi.IMG_QUERY_rXO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rXO
.. autodata:: geosoft.gxapi.IMG_QUERY_rYO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rYO
.. autodata:: geosoft.gxapi.IMG_QUERY_rDX
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rDX
.. autodata:: geosoft.gxapi.IMG_QUERY_rDY
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rDY
.. autodata:: geosoft.gxapi.IMG_QUERY_rROT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rROT
.. autodata:: geosoft.gxapi.IMG_QUERY_rBASE
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rBASE
.. autodata:: geosoft.gxapi.IMG_QUERY_rMULT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rMULT
.. autodata:: geosoft.gxapi.IMG_QUERY_rCOMPRESSION_RATIO
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_QUERY_rCOMPRESSION_RATIO


.. _IMG_RELOCATE:

IMG_RELOCATE constants
-----------------------------------------------------------------------

Relocation Style

.. autodata:: geosoft.gxapi.IMG_RELOCATE_FIT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_RELOCATE_FIT
.. autodata:: geosoft.gxapi.IMG_RELOCATE_ASPECT
    :annotation:
    
    .. autoattribute:: geosoft.gxapi.IMG_RELOCATE_ASPECT

	